# NVlabs___parrot

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  parrot.hpp
.github/workflows/: auto-assign.yml  check-cccl-update.yml  check-hpc-sdk-update.yml  clang-format-check.yml  clang-tidy.yml  dco-check.yml  docs-warnings-check.yml  examples-tests.yml  iwyu.yml  unit-tests.yml
docs/: conf.py  fusion_array.rst  how_to_use.rst  index.rst
docs/_static/: custom.css  github_icon.js
scripts/: run-clang-tidy.sh  run-examples.sh  sync-upstream.sh
scripts/kp/: README.md  kp
tests/: test_array_operations.cu  test_multidimensional.cu  test_sorting.cu
